@startuml GitSteering Architecture

!define LIGHTORANGE #FFE4B5
!define LIGHTBLUE #ADD8E6
!define LIGHTGREEN #90EE90
!define LIGHTPINK #FFB6C1

package "GitSteering" {
  
  class GitSteering <<module>> {
    +configuration: Configuration
    +configure(block)
    +reset_configuration!()
  }
  
  class Configuration {
    +project_root: String
    +vendor_path: String
    +submodules_path: String
    +steering_path: String
    +dry_run: Boolean
    +full_vendor_path(): String
    +full_submodules_path(): String
    +full_steering_path(): String
  }
  
  class FileScanner {
    -config: Configuration
    +initialize(config)
    +scan_steering_files(): Hash
    -scan_directory(base_path): Hash
  }
  
  class SymlinkManager {
    -config: Configuration
    -scanner: FileScanner
    -reporter: Reporter
    +initialize(config)
    +symlink_build(): Reporter
    -ensure_steering_directory()
    -scan_existing_symlinks(): Hash
    -scan_existing_files(): Hash
    -process_symlinks(sources, links, files)
    -create_symlink(source, target)
    -update_symlink(target, new_source)
    -cleanup_broken_symlinks(links, sources)
  }
  
  class Reporter {
    -actions: Array
    +add_action(type, path, details)
    +print_summary()
    +stats(): Hash
    -print_group(items, title, color)
  }
  
  class CLI {
    +symlink_build(options)
    +version()
    -configure_from_options()
  }
  
  class Error <<exception>> {
  }
  
  ' Relationships
  GitSteering *-- Configuration : contains
  GitSteering ..> Error : raises
  
  SymlinkManager o-- Configuration : uses
  SymlinkManager *-- FileScanner : contains
  SymlinkManager *-- Reporter : contains
  
  FileScanner o-- Configuration : uses
  
  CLI ..> SymlinkManager : creates
  CLI ..> Configuration : configures
  CLI ..> Reporter : displays
  
  ' Notes
  note right of GitSteering
    Main module providing
    configuration management
  end note
  
  note right of SymlinkManager
    Core logic for managing
    symlinks lifecycle
  end note
  
  note right of FileScanner
    Discovers steering files
    in vendor and submodules
  end note
  
  note right of Reporter
    Tracks and displays
    all actions taken
  end note
  
  note right of CLI
    Thor-based command
    line interface
  end note
}

@enduml
